# ecg-timeseries-model

./: .gitignore  README.md  base.csv  pyproject.toml  reduced.csv
1_Dataset_Exploration/: EDA.ipynb
3_Data Augmentation/: data_augmentation.ipynb  ecg_model_with_heart_features.pth  seperate_aug.ipynb
Data_Reduction/: lossy_compression_pca.ipynb  pfor.ipynb  quantized.ipynb  quantized_data.py
Dataset_Exploration/: EDA.ipynb
Dataset_Exploration/.ipynb_checkpoints/: EDA-checkpoint.ipynb
Modeling_Tuning_Augmentation/: VariableLengthSequence.ipynb  paddedsequence_rnn.ipynb  setlength_models.ipynb
Predictions/: augment.csv
models/: FixedLengthSequence.ipynb  VariableLengthSequence.ipynb  model-1.ipynb  paddedsequence_rnn .ipynb  paddedsequence_rnn.ipynb  rnn.ipynb  setlength_models.ipynb  wavelet.ipynb
