[tool.poetry]
name = "amls-project"
version = "0.1.0"
description = "AMLS-ECG-Exercise"
authors = ["Selin <dont@gmail.com>"]
readme = "README.md"
package-mode = false
license = "MIT"



[tool.poetry.dependencies]
python = ">=3.11,<4"
torch = ">=2.2.0"
numpy = "^2.3.1"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
pandas = "^2.3.0"
scikit-learn = "^1.7.0"
heartpy = "^1.2.7"
pywavelets = "^1.8.0"
tqdm = "^4.67.1"
biosppy = "^2.2.3"
peakutils = "^1.3.5"
torchvision = "^0.22.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"